feat: added process memory information and a table view.

--- a/WalnutApp/imgui.ini
+++ b/WalnutApp/imgui.ini
@@ -46,6 +46,12 @@ Size=370,876
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Task Manager]
+Pos=1,58
+Size=1606,876
+Collapsed=0
+DockId=0x00000002,0
+
 [Table][0x861D378E,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -63,10 +69,18 @@ Column 0  Weight=1.0000
 Column 1  Width=144
 Column 2  Width=216
 
+[Table][0x2C40F0F8,6]
+Column 0  Weight=1.2324
+Column 1  Weight=0.7661 Sort=0^
+Column 2  Weight=0.9992
+Column 3  Weight=0.9992
+Column 4  Weight=1.1705
+Column 5  Weight=0.8327
+
 [Docking][Data]
-DockSpace     ID=0xCDC34B94 Window=0x41896AB8 Pos=109,162 Size=1606,876 Split=X Selected=0xE87781F4
+DockSpace     ID=0xCDC34B94 Window=0x41896AB8 Pos=83,136 Size=1606,876 Split=X Selected=0xE87781F4
   DockNode    ID=0x00000003 Parent=0xCDC34B94 SizeRef=370,876 Selected=0x9011F789
   DockNode    ID=0x00000004 Parent=0xCDC34B94 SizeRef=1234,876 Split=X
     DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=284,876 Selected=0x9B88CA06
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1320,876 CentralNode=1 Selected=0x9011F789
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1320,876 CentralNode=1 Selected=0xFAB23FFA
 
